--- a/docker/alpine/3.3/lamp/php5.3/conf/httpd.conf
+++ b/docker/alpine/3.3/lamp/php5.3/conf/httpd.conf
@@ -216,7 +216,7 @@ ServerSignature On
 #
 # If your host doesn't have a registered DNS name, enter its IP address here.
 #
-#ServerName www.example.com:80
+ServerName localhost:80
 
 #
 # Deny access to the entirety of your server's filesystem. You must
@@ -274,7 +274,7 @@ DocumentRoot "/var/www/localhost/htdocs"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html
+    DirectoryIndex index.php index.html
 </IfModule>
 
 #
