--- a/docker/alpine/3.3/lamp/php5.3/conf/www.conf
+++ b/docker/alpine/3.3/lamp/php5.3/conf/www.conf
@@ -1,10 +1,13 @@
+AddType text/html .php
+DirectoryIndex index.php index.html
+
 <VirtualHost *:80>
     ## PHP5
     AddHandler php5-script .php
 
+    ServerName localhost:80
     ServerAdmin you@example.com
     DocumentRoot /var/www/localhost/htdocs
-    ServerName localhost
     ErrorLog /var/log/apache2/error.log
     CustomLog /var/log/apache2/access.log combined
     <Directory /var/www/localhost/htdocs>
